Organization and extra validations to create a reservation